# query_level_uncertainty

./: LICENSE  README.md  pyproject.toml  run.py
eval_ql_uncertainty/: run_baseline.py  run_ic.py  run_rag.py
eval_ql_uncertainty/baseline_data/attn_entropy/: gsm8k_attn_entropy_llama-3.1-8b-instruct.json  gsm8k_attn_entropy_phi-3-mini-4k-instruct.json  gsm8k_attn_entropy_qwen2.5-14b-instruct.json  sciq_attn_entropy_llama-3.1-8b-instruct.json  sciq_attn_entropy_phi-3-mini-4k-instruct.json  sciq_attn_entropy_qwen2.5-14b-instruct.json  trivia_qa_attn_entropy_llama-3.1-8b-instruct.json  trivia_qa_attn_entropy_phi-3-mini-4k-instruct.json  trivia_qa_attn_entropy_qwen2.5-14b-instruct.json
eval_ql_uncertainty/baseline_data/max_prob/: gsm8k_max_prob_llama-3.1-8b-instruct.json  gsm8k_max_prob_phi-3-mini-4k-instruct.json  gsm8k_max_prob_qwen2.5-14b-instruct.json  sciq_max_prob_llama-3.1-8b-instruct.json  sciq_max_prob_phi-3-mini-4k-instruct.json  sciq_max_prob_qwen2.5-14b-instruct.json  trivia_qa_max_prob_llama-3.1-8b-instruct.json  trivia_qa_max_prob_phi-3-mini-4k-instruct.json  trivia_qa_max_prob_qwen2.5-14b-instruct.json
eval_ql_uncertainty/baseline_data/mink_entropy/: gsm8k_mink_entropy_llama-3.1-8b-instruct.json  gsm8k_mink_entropy_phi-3-mini-4k-instruct.json  gsm8k_mink_entropy_qwen2.5-14b-instruct.json  sciq_mink_entropy_llama-3.1-8b-instruct.json  (+5 more)
eval_ql_uncertainty/rag_data/: rag_trivia_qa_phi-3-mini-4k-instruct.json
ql_uncertainty/: __init__.py  baselines.py  inference.py  internal_confidence.py  utils.py
src/: baseline.py
(+18 files in other folders)
